--- a/app/globals.css
+++ b/app/globals.css
@@ -147,6 +147,16 @@
     /* background: linear-gradient(to right, #1f4037, #99f2c8); */
   }
 
+  .success-gradient {
+    background: linear-gradient(to right, #0f9b8e, #007965);
+  }
+
+  .warning-gradient {
+    background: linear-gradient(to right, #d97706, #b45309);
+  }
+
+
+
   .main-link-gradient {
     /* background: linear-gradient(to right, #ff758c, #ff7eb3); */
     /* background: linear-gradient(to right, #a18cd1, #fbc2eb); */
